@@ -105,12 +105,12 @@ CREATE TABLE wkf_activity (
     subflow BIGINT,
     split_mode VARCHAR(255),
     join_mode VARCHAR(255),
-    kind VARCHAR(255) NOT NULL,
     name VARCHAR(255),
     signal_send VARCHAR(255),
     flow_start BOOLEAN NOT NULL,
     flow_stop BOOLEAN NOT NULL,
-    action TEXT,
+    stop_other BOOLEAN NOT NULL,
+    action VARCHAR(255),
     PRIMARY KEY(id),
     CONSTRAINT wkf_activity_workflow_fkey FOREIGN KEY (workflow) REFERENCES wkf (id) ON DELETE CASCADE,
     CONSTRAINT wkf_activity_subflow_fkey FOREIGN KEY (subflow) REFERENCES wkf (id) ON DELETE SET NULL
